force-app/main/default/objects/Applicant__c/fields/Admission_Approved__c.field-meta.xml
<CustomField>
    <fullName>Admission_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Admission Approved</label>
    <type>Checkbox</type>
</CustomField>