force-app/main/default/objects/Applicant__c/fields/Admitted__c.field-meta.xml
<CustomField>
    <fullName>Admitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Admitted</label>
    <type>Checkbox</type>
</CustomField>