force-app/main/default/objects/Applicant__c/fields/Application_fee__c.field-meta.xml
<CustomField>
    <fullName>Application_fee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Application fee</label>
    <type>Checkbox</type>
</CustomField>