force-app/main/default/objects/Applicant__c/fields/GRE__c.field-meta.xml
<CustomField>
    <fullName>GRE__c</fullName>
    <label>GRE</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>