force-app/main/default/objects/Applicant__c/fields/Language_Score__c.field-meta.xml
<CustomField>
    <fullName>Language_Score__c</fullName>
    <label>Language Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>