force-app/main/default/objects/Applicant__c/fields/Language_Test__c.field-meta.xml
<CustomField>
    <fullName>Language_Test__c</fullName>
    <label>Language Test</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GRE</fullName>
            </value>
            <value>
                <fullName>TOEFL</fullName>
            </value>
            <value>
                <fullName>IELTS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>