force-app/main/default/objects/Applicant__c/fields/Student_ID__c.field-meta.xml
<CustomField>
    <fullName>Student_ID__c</fullName>
    <displayFormat>ID# {00000000}</displayFormat>
    <label>Applicant ID</label>
    <type>AutoNumber</type>
</CustomField>