force-app/main/default/objects/Applicant__c/validationRules/Application_Fee_Not_paid.validationRule-meta.xml
<ValidationRule>
    <fullName>Application_Fee_Not_paid</fullName>
    <active>true</active>
    <description>Cannot move to Qualification as Application Fee is not paid yet</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &quot;Qualification&quot;),
    NOT(Application_fee__c)
)</errorConditionFormula>
    <errorDisplayField>Application_fee__c</errorDisplayField>
    <errorMessage>Cannot move to Qualification as Application Fee is not paid yet</errorMessage>
</ValidationRule>