force-app/main/default/objects/Applicant__c/listViews/Admission_Team_Applicant.listView-meta.xml
<ListView>
    <fullName>Admission_Team_Applicant</fullName>
    <filterScope>Queue</filterScope>
    <label>Admission Team</label>
    <queue>Admission_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>