force-app/main/default/objects/Applicant__c/listViews/Committee_Head_Applicant.listView-meta.xml
<ListView>
    <fullName>Committee_Head_Applicant</fullName>
    <filterScope>Queue</filterScope>
    <label>Committee Head</label>
    <queue>Committee_Head</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>