force-app/main/default/objects/Applicant__c/listViews/Decision_Committee_Applicant.listView-meta.xml
<ListView>
    <fullName>Decision_Committee_Applicant</fullName>
    <filterScope>Queue</filterScope>
    <label>Decision Committee</label>
    <queue>Decision_Committee</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>